# chat-channel-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
chat_channel_bot/: config.py  embedchain_async.py  openai_async.py
