[tool.poetry]
name = "chat-channel-bot"
version = "0.1.0"
description = ""
authors = ["reidond <reidond@gmail.com>"]
readme = "README.md"
packages = [{ include = "chat_channel_bot" }]

[tool.poetry.dependencies]
python = "^3.11"
embedchain = "^0.0.10"
discord = "^2.3.1"
awaits = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
